--- a/zigbee2mqtt-proxy/config.json
+++ b/zigbee2mqtt-proxy/config.json
@@ -1,7 +1,7 @@
 {
-    "name": "Zigbee2MQTT Proxy",
+    "name": "Zigbee2MQTT A95X",
     "version": "0.2.0",
-    "slug": "zigbee2mqtt_proxy",
+    "slug": "zigbee2mqtt_a95x",
     "description": "Proxy for externally running Zigbee2MQTT",
     "url": "https://github.com/zigbee2mqtt/hassio-zigbee2mqtt/tree/master/zigbee2mqtt-proxy",
     "arch": [
